WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11517
REGRESSION: Flash clicks/interactivity not working properly (
r17582
+)
https://bugs.webkit.org/show_bug.cgi?id=11517
Summary
REGRESSION: Flash clicks/interactivity not working properly (r17582+)
Kevin M. Dean
Reported
2006-11-04 07:33:14 PST
When using the menu at the top, clicking on the link no longer works. Similarly, on myspace.com when viewing a user page that has the music player on it, clicking the pause button no longer works. So, it seems that somethings up with webkit and flash. Works fine in Safari and earlier versions of webkit. (
r17566
works).
Attachments
proposed fix
(10.42 KB, patch)
2006-11-05 14:23 PST
,
Alexey Proskuryakov
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2006-11-04 13:55:42 PST
Hmm, I wonder if I broke this when fixing
bug 7323
. It seems that Flash gets an initial mousedown, but further event handling doesn't work.
Chris Petersen
Comment 2
2006-11-05 10:14:02 PST
Yep, I ran into this issue too. Regression occured between
r17567
-
r17582
.
Chris Petersen
Comment 3
2006-11-05 10:52:19 PST
This is also filed as <
rdar://problem/4820462
>
Alexey Proskuryakov
Comment 4
2006-11-05 14:23:01 PST
Created
attachment 11388
[details]
proposed fix
Maciej Stachowiak
Comment 5
2006-11-05 19:24:53 PST
Comment on
attachment 11388
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 6
2006-11-06 00:51:23 PST
Committed revision 17611.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug